# advent-of-code

./: .gitignore  Cargo.toml  flake.nix  justfile  package-lock.json  readme.md
src/: dbg.rs  grid.rs  input.rs  lib.rs  merge.rs  position.rs  results.rs  tests.rs
