[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
rayon = "1.10.0"
regex = "1.11.1"
svg = "0.18.0"


[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
